# Energy-prices-engineering-project

./: README.md  app.py  index.html  ingest.py  pyproject.toml  requirements.txt
